--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "expo": "^33.0.0",
+    "mem": "^5.1.1",
     "query-string": "^6.8.1",
     "react": "16.8.3",
     "react-dom": "^16.8.6",
