--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
     "react-native-web": "^0.11.4",
     "react-router-native": "^5.0.1",
+    "sharp": "^0.22.1",
     "stringfy": "^0.0.12"
   },
   "devDependencies": {
